# Vietnam-Chatbot-History-using-Langgraph

./: .dockerignore  .gitignore  30_tu_luan.csv  Dockerfile  README.md  app.py  chatbot.db  chatbot.db-shm  chatbot.db-wal  config.yaml  docker-compose.yml  front_end.py  pyproject.toml  requirements.txt  test.py  ui.py
db_helper/: chat_history_service.py  db_connection.py  test_db.py  vector_search.py
db_helper/chunking/: chunking.ipynb  chunking.py
db_helper/preprocessed_text/: preprocess_text.py
db_helper/preprocessed_text/Chinh_Tri/: CacTrieuDaiVietNam.txt  LichSuDang.txt
db_helper/preprocessed_text/Con_Nguoi/: CacCuTrangVietNam.txt  CacNhaChinhTri.txt  CacViToNganhNgheVietNam.txt  NhungNhaCaiCach.txt
db_helper/preprocessed_text/Lich_Su_Chung/: preprocessed_tap_1.txt  preprocessed_tap_10 .txt  preprocessed_tap_11.txt  preprocessed_tap_12.txt  preprocessed_tap_13.txt  preprocessed_tap_14.txt  preprocessed_tap_15.txt  preprocessed_tap_2.txt  preprocessed_tap_3.txt  preprocessed_tap_4.txt  preprocessed_tap_5.txt  preprocessed_tap_6 .txt  (+3 more)
src/: graph.py  models.py  node.py  prompts.py  states.py
src/API/: __init__.py  chat_api.py
src/db_helper/: chat_history_service.py  db_connection.py  test_db.py
src/demo/: Langgraph_tutorial.ipynb  py9.py
src/prompts/: classifier_prompt.txt  final_answer_prompt.txt  reflection_prompt.txt
src/sub_graph/: __init__.py  bm25_lazy.py  graph.py  prompts.py  reflection_graph.py  states.py
src/tools/: web_search.py
src/utils/: async_worker.py  utils.py
test/: 70_trac_nghiem.csv  test_model.py
utils/: utils.py
(+11 files in other folders)
