[project]
name = "project-intern-misa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.16",
    "langchain-community>=0.3.27",
    "langchain[google-genai]>=0.3.27",
    "langgraph>=0.6.4",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "mxbai-rerank>=0.1.6",
    "sentence-transformers>=5.1.0",
]
