[project]
name = "project-intern-misa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "chromadb>=1.0.16",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-tavily>=0.2.11",
    "langchain[google-genai]>=0.3.27",
    "langgraph>=0.6.4",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "mxbai-rerank>=0.1.6",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.1",
    "tavily-python>=0.7.10",
]
