[project]
name = "project-intern-misa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.5",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.1.0",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.3",
    "mxbai-rerank>=0.1.6",
    "psycopg>=3.2.12",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
]
